Updated Twitch channel from GameMage_ to GameMage

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
         <div>
-          <iframe src="https://player.twitch.tv/?channel=gamemage_" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+          <iframe src="https://player.twitch.tv/?channel=gamemage" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
         </div>
     </div>
       <h1 id="logo">
