Changes Instagram and Twitter to _GameMage_
also fixes Twitch link

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
     <div class="col-md-8 col-md-offset-2">
       <div class="row">
         <div class="col-md-8 col-md-offset-2 pad-top pad-bottom">
-          <a href="https://twitter.com/GameMage_" target="_blank">
+          <a href="https://twitter.com/_GameMage_" target="_blank">
             <image src="./gamemage_files/icons/twitter.png" class="social-media-icon" />
           </a>
-          <a href="https://instagram.com/GameMage_" target="_blank">
+          <a href="https://instagram.com/_GameMage_" target="_blank">
             <image src="./gamemage_files/icons/instagram.png" class="social-media-icon" />
           </a>
-          <a href="https://twitch.tv/GameMage_" target="_blank">
+          <a href="https://twitch.tv/GameMage" target="_blank">
             <image src="./gamemage_files/icons/twitch.png" class="social-media-icon" />
           </a>
           <a href="https://www.youtube.com/channel/UCXCBtvZdqqOyY5U5kP_01eQ" target="_blank">
